--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,21 +5,16 @@
     </button>
     <span class="app-title">Bruno's Bank</span>
     <span class="header-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+    Olá, Poliana
+   
   </mat-toolbar>
 
   <mat-drawer-container class="content-container">
     <mat-drawer mode="side" [opened]="sidebarOpen" class="sidebar">
       <mat-list>
+        <mat-list-item><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon></mat-list-item>
         <mat-list-item>Contratos</mat-list-item>
-        <mat-divider></mat-divider>
         <mat-list-item>Pagamentos</mat-list-item>
-        <mat-divider></mat-divider>
         <mat-list-item>Solicitações</mat-list-item>
       </mat-list>
     </mat-drawer>
