--- a/src/app/contratos/contratos.component.html
+++ b/src/app/contratos/contratos.component.html
@@ -17,7 +17,7 @@
     </mat-card>
     <mat-card class="list-contratos card-info">
         <mat-card-title>
-            Pendências
+            Valores pagos
         </mat-card-title>
         <mat-card-content>
     
@@ -25,7 +25,7 @@
     </mat-card>
     <mat-card class="list-contratos card-info">
         <mat-card-title>
-            Perfil
+            Pendências
         </mat-card-title>
         <mat-card-content>
     
@@ -36,7 +36,7 @@
 <mat-card class="list-contratos">
     <mat-card-header>
         <mat-card-title>
-            Lista de contratos
+            Seus contratos
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -75,6 +75,13 @@
                 <th mat-header-cell *matHeaderCellDef>Contratação</th>
                 <td mat-cell *matCellDef="let element">
                     {{element.dataInclusao}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="statusContrato">
+                <th mat-header-cell *matHeaderCellDef>Situação</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.statusContrato}}
                 </td>
             </ng-container>
 
