--- a/src/app/contratos/contratos.component.html
+++ b/src/app/contratos/contratos.component.html
@@ -4,7 +4,7 @@
             Contratos vigentes
         </mat-card-title>
         <mat-card-content>
-    
+    2
         </mat-card-content>
     </mat-card>
     <mat-card class="list-contratos card-info">
@@ -12,7 +12,7 @@
             Valor total
         </mat-card-title>
         <mat-card-content>
-    
+    R$2567,00
         </mat-card-content>
     </mat-card>
     <mat-card class="list-contratos card-info">
@@ -20,7 +20,7 @@
             Valores pagos
         </mat-card-title>
         <mat-card-content>
-    
+            R$0,00
         </mat-card-content>
     </mat-card>
     <mat-card class="list-contratos card-info">
@@ -28,7 +28,7 @@
             Pendências
         </mat-card-title>
         <mat-card-content>
-    
+            Nenhuma pendência
         </mat-card-content>
     </mat-card>
 </div>
@@ -40,13 +40,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let row">
-                    <mat-checkbox></mat-checkbox>
-                </td>
-            </ng-container>
+        <table mat-table [dataSource]="tabelaContratos" matSort>
             <ng-container matColumnDef="_id">
                 <th mat-header-cell *matHeaderCellDef>ID</th>
                 <td mat-cell *matCellDef="let element">
@@ -62,7 +56,7 @@
             <ng-container matColumnDef="valor">
                 <th mat-header-cell *matHeaderCellDef>Valor $</th>
                 <td mat-cell *matCellDef="let element">
-                    {{element.valor}}
+                    {{element.valor | currency:'R$':true:'2.2-4'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="parcelas">
@@ -74,7 +68,7 @@
             <ng-container matColumnDef="dataInclusao">
                 <th mat-header-cell *matHeaderCellDef>Contratação</th>
                 <td mat-cell *matCellDef="let element">
-                    {{element.dataInclusao}}
+                    {{element.dataInclusao | date:'dd/mm/YYYY'}}
                 </td>
             </ng-container>
 
@@ -82,6 +76,12 @@
                 <th mat-header-cell *matHeaderCellDef>Situação</th>
                 <td mat-cell *matCellDef="let element">
                     {{element.statusContrato}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="select">
+                <th mat-header-cell *matHeaderCellDef>Opções</th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-checkbox></mat-checkbox>
                 </td>
             </ng-container>
 
